# rs-sudoku

./: Cargo.toml  Readme.md
.github/workflows/: main.yml  publish.yml
examples/: sudoku1-solution.txt  sudoku1.txt  sudoku2-solution.txt  sudoku2.txt  sudoku3-solution.txt  sudoku3.txt
src/: cli.rs  config.rs  lib.rs  logger.rs  main.rs  sudoku.rs
src/sudoku/: common.rs  field.rs  grid.rs  mod.rs  solver.rs
src/sudoku/solver/: backtracing.rs  mod.rs  montecarlo.rs
