[package]
name = "rs-sudoku"
version = "0.3.0"
authors = ["dotcs <git@dotcs.me>"]
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["cli", "sudoku", "sudoku-solver"]
license = "GPL-3.0-or-later"
license-file = "LICENSE"
readme = "Readme.md"
repository = "https://github.com/dotcs/rs-sudoku"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
itertools = "0.9.0"
log = "0.4.11"
rand = "0.7.3"